# kalman-rust

./: .gitignore  Cargo.toml  README.md  kalman_filter.ipynb  main.rs  user.rs
src/: kalman.rs  lib.rs  main.rs  user.rs
tests/: test_kalman.rs
