[package]
name = "kalman-rust"
version = "0.1.0"
authors = ["Mikhail Kurenkov <kurenkov1995@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.0"
rand = "0.6.5"
nalgebra = "*"
approx = "*"
num-traits = "*"

[lib]
name="kalman_rust"
test = true

[profile.release]
debug = true

[[bin]]
name = "kalman-rust"

